There is no escape — we pay for the violence of our ancestors.
--Paul Muad'Dib Atreides
%
He who can destroy a thing, controls a thing.
--Paul Muad'Dib Atreides
%
Long live the fighters!
--Paul Muad’Dib Atreides
%
My name is a killing word.
--Paul Muad’Dib Atreides
%
Father... father, the sleeper has awakened!
--Paul Muad’Dib Atreides
%
Now remember, walk without rhythm, and we won't attract the worm.
--Paul Muad’Dib Atreides
%
Are you suggesting the Duke's son is an animal?
--Paul Muad’Dib Atreides
%
I will bend like a reed in the wind.
--Paul Muad’Dib Atreides
%
I must rule with eye and claw — as the hawk among lesser birds.
--Duke Leto Atreides
%
I'll miss the sea. But a man needs new experiences. They jar something deep inside, allowing him to grow. Without change, something sleeps inside of us and seldom awakens. The sleeper must awaken.
--Duke Leto Atreides
%
The sleeper must awaken.
--Duke Leto Atreides
%
And how can this be? For he is the Kwisatz Haderach!
--Alia Atreides
%
Those sounds could be imitated.
--Mentat Thufir Hawat
%
Parting with friends is a sadness. A place is only a place.
--Mentat Thufir Hawat
%
Not in the mood? Mood's a thing for cattle and loveplay, not fighting!
--Gurney Halleck
%
If wishes were fishes, we'd all cast nets.
--Gurney Halleck
%
Good. The slow blade penetrates the shield... but, uh, look down. We'd have joined each other in death.
--Gurney Halleck
%
Soon we leave for Arrakis. Arrakis is real. The Harkonnens are real.
--Gurney Halleck
%
May the Hand of God be with you.
--Duncan Idaho
%
He shall know your ways as if born to them.
--Dr. Liet-Kynes
%
Bless the maker and his water, bless the coming and going of him, may his passing cleanse the world.
--Dr. Liet-Kynes
%
May thy knife chip and shatter.
--Fremen saying of ill will against an adversary; Jamis to Paul before their duel
%
To save one from a mistake is a gift of paradise.
--Stilgar
%
I would not have permitted you to harm my tribe.
--Chani
%
They tried and died.
--Mother Gaius Helen Mohiam
%
God created Arrakis to train the faithful.
--The Wisdom of Muad'Dib by the Princess Irulan
%
Vendetta, he says, using the ancient tongue. The art of kanly is still alive in the Universe.
--Mentat Piter De Vries
%
Take them to the desert as the traitor suggested. The worms will destroy the evidence. Their bodies must never be found.
--Mentat Piter De Vries
%
The Bene Gesserit witch must leave.
--Guildsman
%
Muad’Dib learned rapidly because his first training was in how to learn.
--Frank Herbert
%